# bitnet-int8-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  check_gguf.py
bench/: HARDWARE.md  kernels.c
paper/: main.tex  results_ablation.tex  results_crossmodel.tex  results_kv.tex
reference/: FINDINGS.md  SCALING.md  _compare.py  _diag_gen.py  _fdbg.py  _oracle.py  _probe_layout.py  analyze_ci.py  analyze_mech.py  bitnet.py  bitnet_float.py  characterize.py  corpus.py  gen_crossmodel.py  gen_table.py  gguf_loader.py  gguf_tokenizer.py  make_figures.py  ppl.py  prepare_weights.py  run_actbits.py  run_configs.py  run_lowbit.py  run_lowbit2.py  run_mult.py  run_ppl.py  run_ppl2.py  run_recovery.py  sweep_local.sh  wikitext_loader.py
reference/_ppl/: act_absmean.npy  actbits.txt  lowbit.txt  mech.npz  mech_f1b.npz  pc2.npy  pc3.npy  pc4.npy  pc_asym2.npy  pc_asym3.npy  pv2.npy  pv3.npy  pv4.npy  pv8.npy  pv_asym2.npy  recovery.txt  ref.npy  sent.npy
reference/_ppl_f1b/: act_absmean.npy  act_median.npy  pc2.npy  pc_asym2.npy  pc_asym3.npy  pv2.npy  pv8.npy  ref.npy  sent.npy
reference/_ppl_f1b_wiki/: act_absmean.npy  pc2.npy  pc_asym2.npy  pv2.npy  pv8.npy  ref.npy  sent.npy
reference/_ppl_wiki/: act_absmean.npy  pc2.npy  pc_asym2.npy  pc_asym2_prerope.npy  pv2.npy  pv8.npy  ref.npy  sent.npy
reference/_ppl_wiki_full/: act_absmean.npy  act_median.npy  pc2.npy  pc3.npy  pc4.npy  pc_asym2.npy  pc_asym2_prerope.npy  pc_asym3.npy  pv2.npy  pv3.npy  pv4.npy  pv8.npy  pv_asym2.npy  pv_asym3.npy  ref.npy  sent.npy
src/: gguf.rs  lib.rs  main.rs  model.rs
(+9 files in other folders)
